--- a/index7.html
+++ b/index7.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style7.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/webp/favicon.webp" type="image/x-icon">
     <!--================bootstrap-link=================== -->
@@ -391,17 +392,19 @@
             </div>
         </section>
         <!--------------------------------------------------- benifit-section --------------------------------------------------->
-        <div class="section_bg pt-md-4">
-            <div class="container position-relative mw_990 py-md-5 py-4 mt-1">
-                <span class="ellipse_1 position-absolute"></span>
+        <div class="position-relative pt-md-4">
+            <span class="ellipse_1 position-absolute"></span>
                 <span class="ellipse_2 position-absolute"></span>
+                <span class="ellipse_3 position-absolute"></span>
+            <div class="container position-relative mw_990 py-lg-5 py-4 mt-1">
+                
                 <h1
-                    class="mw_733 mb-lg-5 mb-3 ff_opensans fw-bold pt-md-5 lh_7xl fs_8xl text-white text-center mx-auto">
+                    class="mw_733 mb-lg-80 pb-4 pb-lg-0 ff_opensans fw-bold pt-lg-5 lh_7xl fs_8xl text-white text-center mx-auto">
                     How to <span class="font-gradient">Benefit</span> By Investing In AI
                     Stocks For
                     <span class="font-gradient">High Returns</span>
                 </h1>
-                <div class="row flex-sm-row flex-column-reverse align-items-center pb-md-5 mb-2 justify-content-center">
+                <div class="row align-items-center pb-md-5  justify-content-center">
                     <div class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-center position-relative">
                         <div class="position-relative">
                             <img class="mobile_wh position-relative z-3" src="./assets/images/webp/benifit-mobile.webp"
@@ -424,8 +427,8 @@
                     <div class="col-lg-6 col-sm-12 pt-5">
                         <div class="row pb-lg-5 mb-1">
                             <div class="col-lg-6 col-md-3 col-sm-6 pe_10 col-12">
-                                <div class="benifit_gradient mb-27 p_2">
-                                    <div class="benifit_card d-flex flex-column align-items-center">
+                                <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
                                         <span class="icons_card"><svg width="37" height="37" viewBox="0 0 37 37"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -449,8 +452,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 pe_10 col-12">
-                                <div class="benifit_gradient mb-27 p_2">
-                                    <div class="benifit_card d-flex flex-column align-items-center">
+                                <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
                                         <span class="icons_card"><svg width="38" height="33" viewBox="0 0 38 33"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -473,8 +476,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
-                                <div class="benifit_gradient mb-27 p_2">
-                                    <div class="benifit_card d-flex flex-column align-items-center">
+                                <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
                                         <span class="icons_card"><svg width="38" height="32" viewBox="0 0 38 32"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -497,8 +500,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
-                                <div class="benifit_gradient mb-27 p_2">
-                                    <div class="benifit_card  d-flex flex-column align-items-center">
+                                <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
+                                    <div class="benifit_card mx-auto mx-md-0  d-flex flex-column align-items-center">
                                         <span class="icons_card"><svg width="37" height="37" viewBox="0 0 37 37"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path
@@ -526,7 +529,7 @@
                                                     <linearGradient id="paint1_linear_1162_443" x1="13.3582"
                                                         y1="22.3625" x2="18.8484" y2="-4.45403"
                                                         gradientUnits="userSpaceOnUse">
-                                                        <sto offset="1" p stop-color="#00FFE1" />
+                                                        <stop offset="1" p stop-color="#00FFE1" />
                                                         <stop offset="1" stop-color="#6E5DF6" />
                                                     </linearGradient>
                                                     <linearGradient id="paint2_linear_1162_443" x1="30.7047"
@@ -560,7 +563,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="fw-semibold my-md-5 mb-0 ff_opensans fs_lg lh_4xl mw_974 text-center mx-auto text-white">
+                <p class="fw-semibold my-lg-5 mb-0 ff_opensans pt-1 fs_lg lh_4xl mw_974 text-center mx-auto text-white">
                     As per our research and data evaluation from experts, the price of
                     these AI Stocks will rise over time. Today's Investment can give a
                     return of more than 130.66% in 2024.
@@ -570,34 +573,50 @@
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
         <div class="section_bg pt-md-4 mt_10">
             <div class="container mw_1200 py-lg-5 mt-1">
-                <h1 class="mw_733 mb-md-5 pt-4 ff_opensans fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
+                <h1 class="mw_946  pt-4 ff_opensans fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
                     and <span class="font-gradient">Buying Power</span>
                 </h1>
-                <p class="text-white ff_opensans fw-normal mx-auto fs_xs lh_md text-center mw_946 mb-3 mb-md-5">
+                <p class="text-white ff_opensans fw-normal mx-auto pb-2 fs_xs lh_md text-center mw_946 mb-3 mb-md-5">
                     Trading with leveraged accounts in CFDs provides traders with
                     increased buying power, enabling them to attain superior results
                     across various markets. By amplifying potential returns and accessing
                     additional capital, traders can capitalize on market opportunities
                     more effectively, enhancing their overall trading performance.
                 </p>
-                <div class="row align-items-center justify-content-center mt-2 pt-1">
-                    <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+                <div class="row align-items-center justify-content-center  pt-1">
+                    <div class="col-lg-6 col-sm-12 pe-md-4 d-flex flex-column justify-content-center align-items-center">
                         <div
-                            class="understanding_card gap-3 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
+                            class="understanding_card gap-3 me-lg-4 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
                             <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
-                            <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
+                            <p class="ff_opensans fw-bolder text-center mb-0 text-lg-start italic text-white lh_md fs_xs">
                                 John invested
                                 <span class="fw-normal style_normal">
                                     $250 without leverage, so his buying power was $250, and he
                                     could potentially earn up to $40.</span>
                             </p>
                         </div>
-                        <img class="trade_img w-100" src="./assets/images/webp/trade-1.webp" alt="trade-1" />
+                        <div class="accounts_card me-lg-4">
+<p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Leveraged Accounts</p>
+<div class="d-flex justify-content-between align-items-center mb-10">
+<p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">John invested</p>
+<p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
+</div>
+<div class="d-flex justify-content-between align-items-center mb-10">
+<p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Leverage</p>
+<p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">0</p>
+</div>
+<div class="d-flex justify-content-between align-items-center mb-4">
+<p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Buying Power</p>
+<p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
+</div>
+<img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
+<div class="d-flex align-items-center italic trade_btn "> <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$40</p> <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Potential Earnings</p></div>
+</div>
                     </div>
-                    <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
                         <div
-                            class="understanding_card gap-3 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
+                            class="understanding_card  gap-3 d-flex flex-column  flex-lg-row align-items-center justify-content-center align-items-lg-start">
                             <img class="man_img" src="./assets/images/webp/understanding-man-2.webp" alt="man-img" />
                             <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                                 Mike invested
@@ -608,14 +627,29 @@
                                     leveraging on potential gains.</span>
                             </p>
                         </div>
-                        <img class="trade_img w-100" src="./assets/images/webp/trade-2.webp" alt="trade-2" />
-                    </div>
+                        <div class="accounts_card ">
+                            <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Non - Leveraged Accounts</p>
+                            <div class="d-flex justify-content-between align-items-center mb-10">
+                            <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Mike invested</p>
+                            <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-10">
+                            <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Leverage</p>
+                            <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">30X</p>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-4">
+                            <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Buying Power</p>
+                            <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$7500</p>
+                            </div>
+                            <img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
+                            <div class="d-flex align-items-center italic trade_btn "> <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$1200</p> <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Mike achieved returns</p></div>
+                                                    </div>                    </div>
                 </div>
                 <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
-                    <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm text_black">
+                    <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm c-black-100">
                         Maximize Your Profit
                     </button>
-                    <p class="text-white mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
+                    <p class="gray-b3 mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
                         With Leveraged Accounts and Enhanced Buying Power Today!
                     </p>
                 </div>
