--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                         class="col-lg-6 col-sm-12 pe-md-4 d-flex flex-column justify-content-center align-items-center">
                         <div
                             class="understanding_card gap-3 me-lg-4 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
+                            <img class="man_img" src="./assets/images/png/john-invested-img.png" alt="man-img" />
                             <p
                                 class="ff_opensans fw-bolder text-center mb-0 text-lg-start italic text-white lh_md fs_xs">
                                 John invested
@@ -562,7 +562,7 @@
                         class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
                         <div
                             class="understanding_card  gap-3 d-flex flex-column  flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/webp/understanding-man-2.webp" alt="man-img" />
+                            <img class="man_img" src="./assets/images/png/mike-invested-img.png" alt="man-img" />
                             <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                                 Mike invested
                                 <span class="fw-normal style_normal">
@@ -666,31 +666,29 @@
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
             <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-lg-4 pe-xxl-5">
-                <div class="mw_800 mw_750 col-12 w-100 average_hidden">
-                    <div class="d-flex justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo" class="w-100 mw_210 rounded-1">
+                <div class="mw_xxl_800 mw_lg_629 col-12 w-100 me-lg-4 me-xl-0">
+                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
+                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
                         <img src="./assets/images/webp/google-logo.webp" alt="google-img"
-                            class="w-100 mw_210 rounded-1">
+                            class="w-100 mw_averageimg rounded-1">
                         <img src="./assets/images/webp/spotify-logo.webp" alt="spotify-logo"
-                            class="w-100 mw_210 rounded-1">
-                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo" class="w-100 mw_210 rounded-1">
+                            class="w-100 mw_averageimg rounded-1">
+                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo" class="w-100 mw_averageimg rounded-1">
                     </div>
-                    <div class="d-flex justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo"
-                            class="w-100 mw_210 rounded-1">
-                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo" class="w-100 mw_210 rounded-1">
+                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
+                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo" class="w-100 mw_averageimg rounded-1">
                         <img src="./assets/images/webp/samsung-logo.webp" alt="samsung-logo"
-                            class="w-100 mw_210 rounded-1">
-                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo" class="w-100 mw_210 rounded-1">
+                            class="w-100 mw_averageimg rounded-1">
+                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo" class="w-100 mw_averageimg rounded-1">
                     </div>
-                    <div class="d-flex justify-content-center justify-content-lg-start gap-12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo"
-                            class="w-100 mw_210 rounded-1">
+                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12">
+                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo" class="w-100 mw_averageimg rounded-1 d-block d-lg-none">
                         <img src="./assets/images/webp/reliance-logo.webp" alt="reliance-img"
-                            class="w-100 mw_210 rounded-1">
+                            class="w-100 mw_averageimg rounded-1">
                         <img src="./assets/images/webp/stripe-logo.webp" alt="stripe-logo"
-                            class="w-100 mw_210 rounded-1">
-                        <img src="./assets/images/webp/adani.webp" alt="adani-logo" class="w-100 mw_210 rounded-1">
+                            class="w-100 mw_averageimg rounded-1">
+                        <img src="./assets/images/webp/adani.webp" alt="adani-logo" class="w-100 mw_averageimg rounded-1">
                     </div>
                     <!-- <div class="position-relative d-flex gap-12 overflow-hidden mx-auto">
                         <div
