--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
-                    <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm c-black-100">
+                    <button class="main-button fw-bold ff_opensans fs_xs lh_xsm c-black-100">
                         Maximize Your Profit
                     </button>
                     <p class="gray-b3 mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
@@ -772,7 +772,7 @@
                         </h2>
                         <div class="mt-xl-3">
                             <button aria-label="registernow"
-                                class="ff_opensans fw-bold fs_xs lh_xsm common_btn">Register Now</button>
+                                class="ff_opensans fw-bold fs_xs lh_xsm main-button">Register Now</button>
                         </div>
                     </div>
                 </div>
