--- a/index8.html
+++ b/index8.html
@@ -169,83 +169,95 @@
                 </div>
             </div>
         </div>
-        <!-- footer  -->
-        <footer class="mt-md-5 pt-lg-5 position-relative z-1">
-            <span class="footerLeft d-block"></span>
-            <span class="footerRight d-block"></span>
-            <div class="container pt-lg-5">
-                <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
-                    <div class="maxWidth">
-                        <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-3 text-center text-sm-start ">
-                            Empowering Your Financial Future
-                            <span class="d-sm-block">with Intelligent Investments</span>
-                        </p>
-                    </div>
-                    <div class="d-flex jusity-content-center flex-column py-2 py-sm-3 mt_12 mt-sm-0 py-sm-0">
-                        <p class="ff_opensans fw-semibold fs_sm lh_xxl white mb-0 text-center">
-                            Follow Us on
-                        </p>
-                        <div class="d-flex justify-content-center gapFooterLink footerPadding">
-                            <a aria-label="facebook" href="https://www.facebook.com/radialcode/" target="blank" class="circle d-flex justify-content-center align-items-center">
-                                <svg width="10" height="17" viewBox="0 0 10 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M6.66732 9.7513H8.75065L9.58398 6.41797H6.66732V4.7513C6.66732 3.89297 6.66732 3.08464 8.33398 3.08464H9.58398V0.284635C9.31232 0.248802 8.28648 0.167969 7.20315 0.167969C4.94065 0.167969 3.33398 1.5488 3.33398 4.08464V6.41797H0.833984V9.7513H3.33398V16.8346H6.66732V9.7513Z"
-                                            fill="white" />
-                                    </svg>
-                            </a>
-                            <a aria-label="instagram" href="https://www.instagram.com/radialcode/?hl=en" target="blank" class="circle d-flex justify-content-center align-items-center">
-                                <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M10.5 8.5C10.5 8.99445 10.3534 9.4778 10.0787 9.88893C9.80397 10.3 9.41352 10.6205 8.95671 10.8097C8.49989 10.9989 7.99723 11.0484 7.51227 10.952C7.02732 10.8555 6.58186 10.6174 6.23223 10.2678C5.8826 9.91814 5.6445 9.47268 5.54804 8.98773C5.45157 8.50277 5.50108 8.00011 5.6903 7.54329C5.87952 7.08648 6.19995 6.69603 6.61107 6.42133C7.0222 6.14662 7.50555 6 8 6C8.66241 6.00206 9.2971 6.26611 9.76549 6.73451C10.2339 7.2029 10.4979 7.83759 10.5 8.5ZM15.8125 5.0625V11.9375C15.8125 13.0978 15.3516 14.2106 14.5311 15.0311C13.7106 15.8516 12.5978 16.3125 11.4375 16.3125H4.5625C3.40218 16.3125 2.28938 15.8516 1.46891 15.0311C0.648436 14.2106 0.1875 13.0978 0.1875 11.9375V5.0625C0.1875 3.90218 0.648436 2.78938 1.46891 1.96891C2.28938 1.14844 3.40218 0.6875 4.5625 0.6875H11.4375C12.5978 0.6875 13.7106 1.14844 14.5311 1.96891C15.3516 2.78938 15.8125 3.90218 15.8125 5.0625ZM11.75 8.5C11.75 7.75832 11.5301 7.0333 11.118 6.41661C10.706 5.79993 10.1203 5.31928 9.43506 5.03545C8.74984 4.75162 7.99584 4.67736 7.26841 4.82206C6.54098 4.96675 5.8728 5.3239 5.34835 5.84835C4.8239 6.3728 4.46675 7.04098 4.32206 7.76841C4.17736 8.49584 4.25162 9.24984 4.53545 9.93506C4.81928 10.6203 5.29993 11.206 5.91661 11.618C6.5333 12.0301 7.25832 12.25 8 12.25C8.99456 12.25 9.94839 11.8549 10.6517 11.1517C11.3549 10.4484 11.75 9.49456 11.75 8.5ZM13 4.4375C13 4.25208 12.945 4.07082 12.842 3.91665C12.739 3.76248 12.5926 3.64232 12.4213 3.57136C12.25 3.50041 12.0615 3.48184 11.8796 3.51801C11.6977 3.55419 11.5307 3.64348 11.3996 3.77459C11.2685 3.9057 11.1792 4.07275 11.143 4.2546C11.1068 4.43646 11.1254 4.62496 11.1964 4.79627C11.2673 4.96757 11.3875 5.11399 11.5417 5.217C11.6958 5.32002 11.8771 5.375 12.0625 5.375C12.3111 5.375 12.5496 5.27623 12.7254 5.10041C12.9012 4.9246 13 4.68614 13 4.4375Z"
-                                            fill="white" />
-                                    </svg>
-                            </a>
-                            <a aria-label="linkdin" href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in" target="blank" class="circle d-flex justify-content-center align-items-center">
-                                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <mask id="mask0_1743_218" style="mask-type:alpha" maskUnits="userSpaceOnUse"
-                                            x="2" y="2" width="16" height="17">
-                                            <path
-                                                d="M3.75065 5.5013C4.67113 5.5013 5.41732 4.75511 5.41732 3.83464C5.41732 2.91416 4.67113 2.16797 3.75065 2.16797C2.83018 2.16797 2.08398 2.91416 2.08398 3.83464C2.08398 4.75511 2.83018 5.5013 3.75065 5.5013Z"
-                                                fill="white" />
-                                            <path
-                                                d="M2.08398 8H5.41732V18.4167H2.08398V8ZM8.75065 11.9583V18.4167H11.6673V12.5833C11.6673 11.5417 12.2923 10.7083 13.334 10.7083C14.3757 10.7083 15.0007 11.75 15.0007 12.5833V18.4167H17.9173V11.9583C17.9173 10.7083 16.459 8 13.334 8C10.209 8 8.75065 10.7083 8.75065 11.9583Z"
-                                                fill="white" />
-                                        </mask>
-                                        <g mask="url(#mask0_1743_218)">
-                                            <path d="M0 0.5H20V20.5H0V0.5Z" fill="white" />
-                                        </g>
-                                    </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="my-4 py-lg-3">
-                    <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 text-center text-sm-start">
-                        Disclaimer
-                    </p>
-                    <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-3 text-center text-sm-start">
-                        This website is not a news agency, information website, or blog. It is a webpage aimed at promotional publications that use the technique of storytelling to illustrate the scope of the services and products offered. Therefore, the story told on this page
-                        is an infomercial or advertisement for informational and functional purposes, for an understanding of the potential of what is proposed general, risk warning. Investing activities involve a high level of risk and may result in
-                        the total loss of the amount invested. For this reason, these activities may not be suitable for every type of investor. You should not invest money that you cannot afford to lose.
+    <!-- footer  -->
+    <footer class="mt-md-5 pt-lg-5 position-relative z-1">
+        <span class="footerLeft d-block"></span>
+        <span class="footerRight d-block"></span>
+        <div class="container pt-lg-5">
+            <div
+                class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
+                <div class="maxWidth">
+                    <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
+                    <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-3 text-center text-sm-start ">
+                        Empowering Your Financial Future
+                        <span class="d-sm-block">with Intelligent Investments</span>
                     </p>
                 </div>
-            </div>
-            <span class="borderTop d-block mt-lg-4"></span>
-            <div class=" FooterBottomPadding">
-                <div class="container">
-                    <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center">
-                        <div class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0">
-                            <a href="#" class="ff_opensans fw-normal fs_xs lh_xxl hoverText cc-gray"> Privacy Policy </a><span>|</span> <a href="#" class="cc-gray hoverText ff_opensans fw-normal fs_xs lh_xxl">Conditions</a>
-                        </div>
-                        <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 pt-2 pt-sm-0 ">
-                            Report Abuse | Copyright@
-                            <span id="currentYear"></span>
-                        </p>
+                <div class="d-flex jusity-content-center flex-column py-2 py-sm-3 mt_12 mt-sm-0 py-sm-0">
+                    <p class="ff_opensans fw-semibold fs_sm lh_xxl white mb-0 text-center">
+                        Follow Us on
+                    </p>
+                    <div class="d-flex justify-content-center gapFooterLink footerPadding">
+                        <a aria-label="facebook" href="https://www.facebook.com/radialcode/" target="blank"
+                            class="circle d-flex justify-content-center align-items-center">
+                            <svg width="10" height="17" viewBox="0 0 10 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M6.66732 9.7513H8.75065L9.58398 6.41797H6.66732V4.7513C6.66732 3.89297 6.66732 3.08464 8.33398 3.08464H9.58398V0.284635C9.31232 0.248802 8.28648 0.167969 7.20315 0.167969C4.94065 0.167969 3.33398 1.5488 3.33398 4.08464V6.41797H0.833984V9.7513H3.33398V16.8346H6.66732V9.7513Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a aria-label="instagram" href="https://www.instagram.com/radialcode/?hl=en" target="blank"
+                            class="circle d-flex justify-content-center align-items-center">
+                            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M10.5 8.5C10.5 8.99445 10.3534 9.4778 10.0787 9.88893C9.80397 10.3 9.41352 10.6205 8.95671 10.8097C8.49989 10.9989 7.99723 11.0484 7.51227 10.952C7.02732 10.8555 6.58186 10.6174 6.23223 10.2678C5.8826 9.91814 5.6445 9.47268 5.54804 8.98773C5.45157 8.50277 5.50108 8.00011 5.6903 7.54329C5.87952 7.08648 6.19995 6.69603 6.61107 6.42133C7.0222 6.14662 7.50555 6 8 6C8.66241 6.00206 9.2971 6.26611 9.76549 6.73451C10.2339 7.2029 10.4979 7.83759 10.5 8.5ZM15.8125 5.0625V11.9375C15.8125 13.0978 15.3516 14.2106 14.5311 15.0311C13.7106 15.8516 12.5978 16.3125 11.4375 16.3125H4.5625C3.40218 16.3125 2.28938 15.8516 1.46891 15.0311C0.648436 14.2106 0.1875 13.0978 0.1875 11.9375V5.0625C0.1875 3.90218 0.648436 2.78938 1.46891 1.96891C2.28938 1.14844 3.40218 0.6875 4.5625 0.6875H11.4375C12.5978 0.6875 13.7106 1.14844 14.5311 1.96891C15.3516 2.78938 15.8125 3.90218 15.8125 5.0625ZM11.75 8.5C11.75 7.75832 11.5301 7.0333 11.118 6.41661C10.706 5.79993 10.1203 5.31928 9.43506 5.03545C8.74984 4.75162 7.99584 4.67736 7.26841 4.82206C6.54098 4.96675 5.8728 5.3239 5.34835 5.84835C4.8239 6.3728 4.46675 7.04098 4.32206 7.76841C4.17736 8.49584 4.25162 9.24984 4.53545 9.93506C4.81928 10.6203 5.29993 11.206 5.91661 11.618C6.5333 12.0301 7.25832 12.25 8 12.25C8.99456 12.25 9.94839 11.8549 10.6517 11.1517C11.3549 10.4484 11.75 9.49456 11.75 8.5ZM13 4.4375C13 4.25208 12.945 4.07082 12.842 3.91665C12.739 3.76248 12.5926 3.64232 12.4213 3.57136C12.25 3.50041 12.0615 3.48184 11.8796 3.51801C11.6977 3.55419 11.5307 3.64348 11.3996 3.77459C11.2685 3.9057 11.1792 4.07275 11.143 4.2546C11.1068 4.43646 11.1254 4.62496 11.1964 4.79627C11.2673 4.96757 11.3875 5.11399 11.5417 5.217C11.6958 5.32002 11.8771 5.375 12.0625 5.375C12.3111 5.375 12.5496 5.27623 12.7254 5.10041C12.9012 4.9246 13 4.68614 13 4.4375Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a aria-label="linkdin" href="https://www.linkedin.com/company/radialcode/?originalSubdomain=in"
+                            target="blank" class="circle d-flex justify-content-center align-items-center">
+                            <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <mask id="mask0_1743_218" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2"
+                                    width="16" height="17">
+                                    <path
+                                        d="M3.75065 5.5013C4.67113 5.5013 5.41732 4.75511 5.41732 3.83464C5.41732 2.91416 4.67113 2.16797 3.75065 2.16797C2.83018 2.16797 2.08398 2.91416 2.08398 3.83464C2.08398 4.75511 2.83018 5.5013 3.75065 5.5013Z"
+                                        fill="white" />
+                                    <path
+                                        d="M2.08398 8H5.41732V18.4167H2.08398V8ZM8.75065 11.9583V18.4167H11.6673V12.5833C11.6673 11.5417 12.2923 10.7083 13.334 10.7083C14.3757 10.7083 15.0007 11.75 15.0007 12.5833V18.4167H17.9173V11.9583C17.9173 10.7083 16.459 8 13.334 8C10.209 8 8.75065 10.7083 8.75065 11.9583Z"
+                                        fill="white" />
+                                </mask>
+                                <g mask="url(#mask0_1743_218)">
+                                    <path d="M0 0.5H20V20.5H0V0.5Z" fill="white" />
+                                </g>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
-        </footer>
+            <div class="my-4 py-lg-3">
+                <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 text-center text-sm-start">
+                    Disclaimer
+                </p>
+                <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-3 text-center text-sm-start">
+                    This website is not a news agency, information website, or blog. It is a webpage aimed at promotional
+                    publications that use the technique of storytelling to illustrate the scope of the services and products
+                    offered. Therefore, the story told on this page
+                    is an infomercial or advertisement for informational and functional purposes, for an understanding of
+                    the potential of what is proposed general, risk warning. Investing activities involve a high level of
+                    risk and may result in
+                    the total loss of the amount invested. For this reason, these activities may not be suitable for every
+                    type of investor. You should not invest money that you cannot afford to lose.
+                </p>
+            </div>
+        </div>
+        <span class="borderTop d-block mt-lg-4"></span>
+        <div class=" FooterBottomPadding">
+            <div class="container">
+                <div
+                    class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center">
+                    <div class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0">
+                        <a href="#" class="ff_opensans fw-normal fs_xs lh_xxl hoverText cc-gray"> Privacy
+                            Policy </a><span>|</span> <a href="#"
+                            class="cc-gray hoverText ff_opensans fw-normal fs_xs lh_xxl">Conditions</a>
+                    </div>
+                    <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 pt-2 pt-sm-0 ">
+                        Report Abuse | Copyright@
+                        <span id="currentYear"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
         <!-- back to  top -->
         <button aria-label="backtotop" id="backtotop" onclick="window.scroll(0,0)" class=" d_none back_top_btn  z-2 ">
             <span class="back mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" height="20">
